
[package]
name = "probot-claim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"

[dependencies.headless_chrome]
git = "https://github.com/atroche/rust-headless-chrome"
features = ["fetch"]
